# hgit

./: Data.hs  LICENSE  Readers.hs  Writers.hs  hgit.cabal  liscense.txt  readme.md  readme.mkd
Lib/: HGit.hs
Lib/HGit/: Batch.hs  Data.hs  Parsers.hs  Readers.hs  Writers.hs
